--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
   "name": "kakao-order-bot",
   "version": "1.0.0",
-  "description": "카카오톡 오픈채팅방 주문 알림 봇",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "node-kakao": "^4.0.0",
-    "express": "^4.18.0"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "keywords": ["kakao", "bot", "order", "notification"],
-  "author": "당신의이름",
-  "license": "MIT"
+    "express": "^4.18.2",
+    "node-kakao": "^4.2.2"
+  }
 }
