--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-kakao": "^4.2.2"
+    "node-kakao": "^4.4.4",
+    "axios": "^1.6.0"
   }
 }
